more cs, getting rid of LTS, using sprintf strings instead of harcoded values

--- a/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
+++ b/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
@@ -45,8 +45,12 @@ MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_MOVE_AND_REVISE="KEYS TO MOVE AND REVISE"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_REVISE="KEYS TO REVISE"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_ADD="SECTIONS TO ADD"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_DELETE="SECTIONS TO DELETE"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED="[HISTORY FILE ADDED] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED_ERROR="[ERROR CREATING HISTORY] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED="[HISTORY FILE DELETED] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED_ERROR="[ERROR DELETING HISTORY] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_OPTIONS_LABEL="History options"
-MOD_TTM_DIFF_TOOL_OTF_KNOWN_DEV_LINK="* Known in dev Joomla link."
+MOD_TTM_DIFF_TOOL_OTF_KNOWN_DEV_LINK="* Main development Joomla branch link."
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_FROZEN_URL="* Known stable Joomla release."
 MOD_TTM_DIFF_TOOL_OTF_LINE="LINE %s:"
 MOD_TTM_DIFF_TOOL_OTF_LINE_TO="LINE %s TO %s:"
@@ -57,7 +61,7 @@ MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="* NO FILES TO ADD IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="* NO FILES TO DELETE IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
-MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* Orientative URL. Type zipball package can to be in continued rolling release and the id within the package name will be changed frequently."
+MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* Indicative. The development package is modified continuously and the id within the package name is changed frequently."
 MOD_TTM_DIFF_TOOL_OTF_PANEL_1_TITLE="Report"
 MOD_TTM_DIFF_TOOL_OTF_PANEL_2_TITLE="History"
 MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="RESULTING DIFF FROM SELECTED PACKAGES"
