Update es-ES second round

--- a/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
+++ b/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
@@ -28,16 +28,19 @@ MOD_TTM_DIFF_TOOL_OTF_DETAILING_NEW_FILES_CONTENT="DETALLE DEL CONTENIDO PARA AR
 MOD_TTM_DIFF_TOOL_OTF_ECP_DESC="Puede usar esto cuando se produzcan cambios masivos dentro de líneas del tipo comentario. Use una lista separada por comas de cada palabra a detectar. Por ejemplo:  '2013, 2014' puede ayudarle a saltar líneas relacionadas con los cambios de año nuevo."
 MOD_TTM_DIFF_TOOL_OTF_ECP_LABEL="Patrón de comentarios excluidos"
 MOD_TTM_DIFF_TOOL_OTF_EMPTY_HISTORY_FOLDER="El historial está vacío."
+MOD_TTM_DIFF_TOOL_OTF_ENDING="FIN DE LA COMPARACIÓN"
+MOD_TTM_DIFF_TOOL_OTF_ERROR_GITHUB_GETTING_RELEASES="No se puede conectar al repositorio Github para obtener la última lista de liberaciones."
 MOD_TTM_DIFF_TOOL_OTF_FIELD_MODULE_LAYOUT_DESC="La plantilla que se usará para generar el reporte. La vista predeterminada se genera en salida HTML."
-MOD_TTM_DIFF_TOOL_OTF_FILE=" ARCHIVO"
-MOD_TTM_DIFF_TOOL_OTF_FILES_ADD_CLIENT="ARCHIVOS A AÑADIR EN AL CLIENTE "
-MOD_TTM_DIFF_TOOL_OTF_FILES_DELETE_CLIENT="ARCHIVOS A BORRAR AL CLIENTE "
-MOD_TTM_DIFF_TOOL_OTF_FILE_CHANGES="-CAMBIOS EN EL ARCHIVO"
-MOD_TTM_DIFF_TOOL_OTF_FROM="Descargar: "
+;MOD_TTM_DIFF_TOOL_OTF_FILE=" FILE"
+MOD_TTM_DIFF_TOOL_OTF_FILES_ADD_CLIENT="ARCHIVOS A AÑADIR EN AL CLIENTE %s"
+MOD_TTM_DIFF_TOOL_OTF_FILES_DELETE_CLIENT="ARCHIVOS A BORRAR AL CLIENTE %s"
+MOD_TTM_DIFF_TOOL_OTF_FILE_CHANGES="%s - CAMBIOS EN EL ARCHIVO"
+MOD_TTM_DIFF_TOOL_OTF_FROM="Descargar: %s"
 MOD_TTM_DIFF_TOOL_OTF_FRONZEN_NOT_STORED_URL="*Puede que sea una liberación conocida de Joomla, pero no está almacenada en esta versión del módulo."
 MOD_TTM_DIFF_TOOL_OTF_GITHUB_NOT_STORED_URL="* El enlace no está usando una forma conocida de llamar al repositorio en GitHub. Los primeros 7 dígitos del ID SHA están apuntando a una marca de tiempo real."
 MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_ADD="COMENTARIOS A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_DELETE="COMENTARIOS A BORRAR"
+MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_EXCLUDE="El <strong>%s</strong>  ha sido <strong>excluido</strong> debido a que se trata de un cambio masivo que afecta a la mayoría de archivos de este cliente."
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_ADD="CONSTANTES A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_DELETE="CONSTANTES A BORRAR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_MOVE="CONSTANTES A MOVER"
@@ -45,15 +48,20 @@ MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_MOVE_AND_REVISE="CONSTANTES A MOVER Y REVISAR
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_REVISE="CONSTANTES A REVISAR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_ADD="SECCIONES A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_DELETE="SECCIONES A BORRAR"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED="[AARCHIVO DE HISTORIAL AÑADIDO] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED_ERROR="[ERROR CREANDO HISTORIAL] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED="[ARCHIVO DEL HISTORIAL BORRADO] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED_ERROR="[ERROR BORRANDO HISTORIAL] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_OPTIONS_LABEL="Opciones del historial"
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_DEV_LINK="* Enlace conocido para desarrollar Joomla."
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_FROZEN_URL="* Liberación de Joomla conocida."
-MOD_TTM_DIFF_TOOL_OTF_LINE="LÍNEA "
+MOD_TTM_DIFF_TOOL_OTF_LINE="LÍNEA %s"
+MOD_TTM_DIFF_TOOL_OTF_LINE_TO="LINEA %s A LA %s:"
 MOD_TTM_DIFF_TOOL_OTF_MAYBE_FROZEN_URL="*Puede que sea una liberación conocida de Joomla, pero no está almacenada por esta versión del módulo."
-MOD_TTM_DIFF_TOOL_OTF_NEW="NUEVO! -"
+MOD_TTM_DIFF_TOOL_OTF_NEW="NUEVO ARCHIVO:  %s"
 MOD_TTM_DIFF_TOOL_OTF_NOT_EVALUATED_FILE="Este archivo no se evaluará porque se trata de un archivo poco usual dentro del directorio de idiomas."
-MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="NO HAY ARCHIVOS QUE AÑADIR EN EL CLIENTE "
-MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="NO HAY ARCHIVOS QUE BORRAR EN EL CLIENTE "
+MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="NO HAY ARCHIVOS QUE AÑADIR EN EL CLIENTE %s"
+MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="NO HAY ARCHIVOS QUE BORRAR EN EL CLIENTE %s"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
 MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* URL orientativa. Los paquetes del typo zipball pueden estar en continuo desarrollo y el id que se genera dentro del nombre podría cambiar con frecuencia."
@@ -63,23 +71,18 @@ MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="REPORTE DE DIFERENCIAS ENTRE LOS PAQUETES S
 MOD_TTM_DIFF_TOOL_OTF_REQUIRED_FIELDS_SPACER_LABEL="Campos requeridos"
 MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_DESC="El paquete que quiera elegir para que sirva como base o referencia de la revisión."
 MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_LABEL="Paquete de origen"
-MOD_TTM_DIFF_TOOL_OTF_SP_NAME="Nombre del paquete de origen: "
+MOD_TTM_DIFF_TOOL_OTF_SP_NAME="Nombre del paquete de origen: %s"
 MOD_TTM_DIFF_TOOL_OTF_SR_CUSTOM_VALUE_DESC="Use una URL válida y completa apuntando hacia un paquete de Joomla. Esto solo funciona cuando está seleccionada la opción 'URL personalizada al archivo zip' desde el campo 'Paquete de origen'."
 MOD_TTM_DIFF_TOOL_OTF_SR_CUSTOM_VALUE_LABEL="URL de origen personalizada"
 MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_CUSTOM="URL personalizada al archivo zip"
-MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_LTS_DEV="LTS - Paquete en desarrollo"
-MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_LTS_FROZEN="LTS - Paquete estable"
-MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_STS_DEV="STS - Paquete en desarrollo"
-MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_STS_FROZEN="STS - Paquete estable"
-MOD_TTM_DIFF_TOOL_OTF_STARTING_ON="INICIANDO LA REVISIÓN EN FECHA "
+MOD_TTM_DIFF_TOOL_OTF_STARTING_ON="INICIANDO LA REVISIÓN EN FECHA UTC  %s"
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_DESC="El paquete que quiera seleccionar como destino para obetener las diferencia frente al actual paquete de origen seleccionado."
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_LABEL="Paquete de destino"
-MOD_TTM_DIFF_TOOL_OTF_TO=" A "
-MOD_TTM_DIFF_TOOL_OTF_TP_NAME="Nombre del paquete de destino: "
+;MOD_TTM_DIFF_TOOL_OTF_TO=" TO "
+MOD_TTM_DIFF_TOOL_OTF_TP_NAME="Nombre del paquete de destino: %s"
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_DESC="Use una URL válida y completa apuntando hacia un paquete de Joomla. Esto solo funciona cuando está seleccionada la opción 'URL personalizada al archivo zip' desde el campo 'Paquete de destino'."
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_LABEL="URL de destino personalizada"
 MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_CUSTOM="URL personalizada al archivo zip"
-MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_STS_DEV="STS - Lo último en desarrollo para la serie 3.2.x"
-MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_STS_FROZEN="STS - Paquete estable"
+MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_STS_DEV="STS - Lo último en desarrollo"
 MOD_TTM_DIFF_TOOL_OTF_ZIPBALL_NOT_STORED_URL="*Enlace tipo zipball desconocido debido a que no está guardado en esta versión del módulo."
 
