--- a/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
+++ b/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
@@ -61,7 +61,7 @@ MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="* NO FILES TO ADD IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="* NO FILES TO DELETE IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
-MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* Indicative. The development package is modified continuously and the id within the package name is changed frequently."
+MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* The development package is modified continuously which may change the diff."
 MOD_TTM_DIFF_TOOL_OTF_PANEL_1_TITLE="Report"
 MOD_TTM_DIFF_TOOL_OTF_PANEL_2_TITLE="History"
 MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="RESULTING DIFF FROM SELECTED PACKAGES"
