es-ES Language update 3 round

--- a/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
+++ b/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
@@ -9,9 +9,9 @@
 
 MOD_TTM_DIFF_TOOL_OTF="TTM diff tool - On The Fly"
 MOD_TTM_DIFF_TOOL_OTF_ACCESS_NOT_ALLOWED="Acceso prohibido. Revise la configuración del módulo."
-MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="At the end of each new report between packs is generated and stored a file type 'package_name_vs_package_name.ttm' than keep there the escaped HTML info to display. If this option is selected as 'Yes', the second and next times calling from the same revision can make posible avoid the task to download the packs and recalculate all the stuff again. If this option is selected as 'No', for each revision between packs called, all starts alwais from zero."
+MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="Al fianl de cada reporte entre paquetes se genera y guarda un archivo del tipo 'package_name_vs_package_name.ttm' que almacena en HTML escapado la información a mostrar.  Si esta opción se configura en 'Sí', la segunda y siguientes veces en la que se llame a la misma revisión, no será necesario descargar los paquetes y recalcularlo todo otra vez. Si la opción está configurada en 'No', siempre se iniciará todo el proceso desde cero, incrementando considerablemente el tiempo de respuesta de carga del sitio web."
 MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_LABEL="Permitir guardar historial"
-MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_DESC="Only the selected groups from here can have access to view and delete history files."
+MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_DESC="Solo los grupos que se seleccionen aquí tendrán acceso a ver y borrar archivos de historiales."
 MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_LABEL="Grupos permitidos"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_ADMIN="Admin"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_INSTALLATION="Instalación"
@@ -32,8 +32,8 @@ MOD_TTM_DIFF_TOOL_OTF_ENDING="FIN DE LA COMPARACIÓN"
 MOD_TTM_DIFF_TOOL_OTF_ERROR_GITHUB_GETTING_RELEASES="No se puede conectar al repositorio Github para obtener la última lista de liberaciones."
 MOD_TTM_DIFF_TOOL_OTF_FIELD_MODULE_LAYOUT_DESC="La plantilla que se usará para generar el reporte. La vista predeterminada se genera en salida HTML."
 ;MOD_TTM_DIFF_TOOL_OTF_FILE=" FILE"
-MOD_TTM_DIFF_TOOL_OTF_FILES_ADD_CLIENT="ARCHIVOS A AÑADIR EN AL CLIENTE %s"
-MOD_TTM_DIFF_TOOL_OTF_FILES_DELETE_CLIENT="ARCHIVOS A BORRAR AL CLIENTE %s"
+MOD_TTM_DIFF_TOOL_OTF_FILES_ADD_CLIENT="ARCHIVOS A AÑADIR EN EL CLIENTE %s"
+MOD_TTM_DIFF_TOOL_OTF_FILES_DELETE_CLIENT="ARCHIVOS A BORRAR EN EL CLIENTE %s"
 MOD_TTM_DIFF_TOOL_OTF_FILE_CHANGES="%s - CAMBIOS EN EL ARCHIVO"
 MOD_TTM_DIFF_TOOL_OTF_FROM="Descargar: %s"
 MOD_TTM_DIFF_TOOL_OTF_FRONZEN_NOT_STORED_URL="*Puede que sea una liberación conocida de Joomla, pero no está almacenada en esta versión del módulo."
@@ -64,7 +64,7 @@ MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="NO HAY ARCHIVOS QUE AÑADIR EN EL CLI
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="NO HAY ARCHIVOS QUE BORRAR EN EL CLIENTE %s"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
-MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* URL orientativa. Los paquetes del typo zipball pueden estar en continuo desarrollo y el id que se genera dentro del nombre podría cambiar con frecuencia."
+MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* El paquete en desarrollo se modifica continuamente y podrían darse cambios en el reporte."
 MOD_TTM_DIFF_TOOL_OTF_PANEL_1_TITLE="Reporte"
 MOD_TTM_DIFF_TOOL_OTF_PANEL_2_TITLE="Historial"
 MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="REPORTE DE DIFERENCIAS ENTRE LOS PAQUETES SELECCIONADOS"
@@ -83,6 +83,6 @@ MOD_TTM_DIFF_TOOL_OTF_TP_NAME="Nombre del paquete de destino: %s"
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_DESC="Use una URL válida y completa apuntando hacia un paquete de Joomla. Esto solo funciona cuando está seleccionada la opción 'URL personalizada al archivo zip' desde el campo 'Paquete de destino'."
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_LABEL="URL de destino personalizada"
 MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_CUSTOM="URL personalizada al archivo zip"
-MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_STS_DEV="STS - Lo último en desarrollo"
+MOD_TTM_DIFF_TOOL_OTF_TR_OPTION_STS_DEV="Staging - Lo último en desarrollo"
 MOD_TTM_DIFF_TOOL_OTF_ZIPBALL_NOT_STORED_URL="*Enlace tipo zipball desconocido debido a que no está guardado en esta versión del módulo."
 
