SOlve some typos

--- a/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
+++ b/language/es-ES/es-ES.mod_ttm_diff_tool_otf.ini
@@ -9,7 +9,7 @@
 
 MOD_TTM_DIFF_TOOL_OTF="TTM diff tool - On The Fly"
 MOD_TTM_DIFF_TOOL_OTF_ACCESS_NOT_ALLOWED="Acceso prohibido. Revise la configuración del módulo."
-MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="Al fianl de cada reporte entre paquetes se genera y guarda un archivo del tipo 'package_name_vs_package_name.ttm' que almacena en HTML escapado la información a mostrar.  Si esta opción se configura en 'Sí', la segunda y siguientes veces en la que se llame a la misma revisión, no será necesario descargar los paquetes y recalcularlo todo otra vez. Si la opción está configurada en 'No', siempre se iniciará todo el proceso desde cero, incrementando considerablemente el tiempo de respuesta de carga del sitio web."
+MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="Al final de cada reporte entre paquetes se genera y guarda un archivo del tipo 'package_name_vs_package_name.ttm' que almacena en HTML escapado la información a mostrar. Si esta opción se configura en 'Sí', la segunda y siguientes veces en las que se llame a la misma revisión, no será necesario descargar los paquetes y recalcularlo todo otra vez. Si la opción está configurada en 'No', siempre se iniciará todo el proceso desde cero, incrementando considerablemente el tiempo de respuesta de carga del sitio web."
 MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_LABEL="Permitir guardar historial"
 MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_DESC="Solo los grupos que se seleccionen aquí tendrán acceso a ver y borrar archivos de historiales."
 MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_LABEL="Grupos permitidos"
@@ -17,7 +17,7 @@ MOD_TTM_DIFF_TOOL_OTF_CLIENT_ADMIN="Admin"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_INSTALLATION="Instalación"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_ADMIN_SELECTED="Admininstración"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_DESC="Elija el cliente o clientes que quiera incluir en la revisión."
-MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_INSTALLATION_SELECTED="Installación"
+MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_INSTALLATION_SELECTED="Instalación"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_LABEL="Clientes"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_SITE_SELECTED="Sitio"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SITE="Sitio"
@@ -40,7 +40,7 @@ MOD_TTM_DIFF_TOOL_OTF_FRONZEN_NOT_STORED_URL="*Puede que sea una liberación con
 MOD_TTM_DIFF_TOOL_OTF_GITHUB_NOT_STORED_URL="* El enlace no está usando una forma conocida de llamar al repositorio en GitHub. Los primeros 7 dígitos del ID SHA están apuntando a una marca de tiempo real."
 MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_ADD="COMENTARIOS A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_DELETE="COMENTARIOS A BORRAR"
-MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_EXCLUDE="El <strong>%s</strong>  ha sido <strong>excluido</strong> debido a que se trata de un cambio masivo que afecta a la mayoría de archivos de este cliente."
+MOD_TTM_DIFF_TOOL_OTF_HAVE_COMMENTS_TO_EXCLUDE="El <strong>%s</strong> ha sido <strong>excluido</strong> debido a que se trata de un cambio masivo que afecta a la mayoría de archivos de este cliente."
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_ADD="CONSTANTES A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_DELETE="CONSTANTES A BORRAR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_MOVE="CONSTANTES A MOVER"
@@ -48,7 +48,7 @@ MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_MOVE_AND_REVISE="CONSTANTES A MOVER Y REVISAR
 MOD_TTM_DIFF_TOOL_OTF_HAVE_KEYS_TO_REVISE="CONSTANTES A REVISAR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_ADD="SECCIONES A AÑADIR"
 MOD_TTM_DIFF_TOOL_OTF_HAVE_SECTIONS_TO_DELETE="SECCIONES A BORRAR"
-MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED="[AARCHIVO DE HISTORIAL AÑADIDO] %s"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED="[ARCHIVO DE HISTORIAL AÑADIDO] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED_ERROR="[ERROR CREANDO HISTORIAL] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED="[ARCHIVO DEL HISTORIAL BORRADO] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED_ERROR="[ERROR BORRANDO HISTORIAL] %s"
@@ -56,7 +56,7 @@ MOD_TTM_DIFF_TOOL_OTF_HISTORY_OPTIONS_LABEL="Opciones del historial"
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_DEV_LINK="* Enlace conocido para desarrollar Joomla."
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_FROZEN_URL="* Liberación de Joomla conocida."
 MOD_TTM_DIFF_TOOL_OTF_LINE="LÍNEA %s"
-MOD_TTM_DIFF_TOOL_OTF_LINE_TO="LINEA %s A LA %s:"
+MOD_TTM_DIFF_TOOL_OTF_LINE_TO="LÍNEA %s A LA %s:"
 MOD_TTM_DIFF_TOOL_OTF_MAYBE_FROZEN_URL="*Puede que sea una liberación conocida de Joomla, pero no está almacenada por esta versión del módulo."
 MOD_TTM_DIFF_TOOL_OTF_NEW="NUEVO ARCHIVO:  %s"
 MOD_TTM_DIFF_TOOL_OTF_NOT_EVALUATED_FILE="Este archivo no se evaluará porque se trata de un archivo poco usual dentro del directorio de idiomas."
@@ -64,18 +64,18 @@ MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="NO HAY ARCHIVOS QUE AÑADIR EN EL CLI
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="NO HAY ARCHIVOS QUE BORRAR EN EL CLIENTE %s"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
-MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* El paquete en desarrollo se modifica continuamente y podrían darse cambios en el reporte."
+MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* El paquete en desarrollo se modifica continuamente y podrían darse cambios en la revisión."
 MOD_TTM_DIFF_TOOL_OTF_PANEL_1_TITLE="Reporte"
 MOD_TTM_DIFF_TOOL_OTF_PANEL_2_TITLE="Historial"
 MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="REPORTE DE DIFERENCIAS ENTRE LOS PAQUETES SELECCIONADOS"
 MOD_TTM_DIFF_TOOL_OTF_REQUIRED_FIELDS_SPACER_LABEL="Campos requeridos"
-MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_DESC="El paquete que quiera elegir para que sirva como base o referencia de la revisión."
+MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_DESC="El paquete que quiera elegir que sirva como base o referencia de la revisión."
 MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_LABEL="Paquete de origen"
 MOD_TTM_DIFF_TOOL_OTF_SP_NAME="Nombre del paquete de origen: %s"
 MOD_TTM_DIFF_TOOL_OTF_SR_CUSTOM_VALUE_DESC="Use una URL válida y completa apuntando hacia un paquete de Joomla. Esto solo funciona cuando está seleccionada la opción 'URL personalizada al archivo zip' desde el campo 'Paquete de origen'."
 MOD_TTM_DIFF_TOOL_OTF_SR_CUSTOM_VALUE_LABEL="URL de origen personalizada"
 MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_CUSTOM="URL personalizada al archivo zip"
-MOD_TTM_DIFF_TOOL_OTF_STARTING_ON="INICIANDO LA REVISIÓN EN FECHA UTC  %s"
+MOD_TTM_DIFF_TOOL_OTF_STARTING_ON="INICIANDO LA REVISIÓN EN FECHA UTC %s"
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_DESC="El paquete que quiera seleccionar como destino para obetener las diferencia frente al actual paquete de origen seleccionado."
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_LABEL="Paquete de destino"
 ;MOD_TTM_DIFF_TOOL_OTF_TO=" TO "
