--- a/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
+++ b/language/en-GB/en-GB.mod_ttm_diff_tool_otf.ini
@@ -6,14 +6,14 @@
 
 MOD_TTM_DIFF_TOOL_OTF="TTM diff tool - On The Fly"
 MOD_TTM_DIFF_TOOL_OTF_ACCESS_NOT_ALLOWED="Access forbidden. Check module configuration."
-MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="Allows or not to store and use the generated report that the program creates after each diff task.<br>The created file type 'package_name_vs_package_name.ttm' keeps there the escaped HTML info to display so that it will not be necessary to download again from the same revision and recalculate all again.<br>If this option is set to 'No', all starts always from scratch.<br>When set to 'Yes', after rendering the module, a new tab will be present to let handle the stored history (delete the selected ones and keep what you want to keep there)."
+MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_DESC="Allows or not to store and use the report generated after each diff task.<br>The created file type 'package_name_vs_package_name.ttm' keeps there the escaped HTML info to display so that it will not be necessary to download again from the same revision and recalculate all again.<br>If this option is set to 'No', all starts always from scratch.<br>When set to 'Yes', after rendering the module, a new tab will be present to let handle the stored history (delete the selected ones and keep what you want to keep there)."
 MOD_TTM_DIFF_TOOL_OTF_ALLOW_HISTORY_LABEL="Allow stored history"
 MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_DESC="Only the selected groups will have access to view and delete history files."
 MOD_TTM_DIFF_TOOL_OTF_ALLOWED_GROUPS_TO_HISTORY_LABEL="Allowed groups"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_ADMIN="Admin"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_INSTALLATION="Install"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_ADMIN_SELECTED="Admin"
-MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_DESC="Choose the client or clients to include in the revision."
+MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_DESC="Choose the client or clients to include in the comparison."
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_INSTALLATION_SELECTED="Installation"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_LABEL="Clients"
 MOD_TTM_DIFF_TOOL_OTF_CLIENT_SELECTION_SITE_SELECTED="Site"
@@ -22,13 +22,12 @@ MOD_TTM_DIFF_TOOL_OTF_DELETE_SELECTED="Delete selected"
 MOD_TTM_DIFF_TOOL_OTF_DETAILING_CHANGES_COMMON_FILES_BY_CLIENT="DETAILING CHANGES FOR THE COMMON FILES FOR THIS CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_DETAILING_NO_CHANGES_COMMON_FILES_BY_CLIENT="NO CHANGES DETECTED FOR THE COMMON FILES FOR THIS CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_DETAILING_NEW_FILES_CONTENT="DETAILS OF THE NEW FILES FOR THIS CLIENT"
-MOD_TTM_DIFF_TOOL_OTF_ECP_DESC="You can use this when massive changes within commented lines are applied. Use a comma separated list for each word to consider. For example: '2013, 2014' or 'Copyright' (case sensitive) can help skipping all the commented lines related with the new year changes."
+MOD_TTM_DIFF_TOOL_OTF_ECP_DESC="You can use this when massive changes within commented lines are applied. Use a comma separated list for each word to consider. For example: '2013, 2014' or 'Copyright' (case sensitive) can help skipping all the commented lines related to the new year change."
 MOD_TTM_DIFF_TOOL_OTF_ECP_LABEL="Excluded comments pattern"
 MOD_TTM_DIFF_TOOL_OTF_EMPTY_HISTORY_FOLDER="The history folder is empty."
 MOD_TTM_DIFF_TOOL_OTF_ENDING="END OF COMPARISON"
 MOD_TTM_DIFF_TOOL_OTF_ERROR_GITHUB_GETTING_RELEASES="Can't connect with Github repository to get the last releases list."
 MOD_TTM_DIFF_TOOL_OTF_FIELD_MODULE_LAYOUT_DESC="The layout used to show the reported info. Default view is 'Full HTML' output."
-;MOD_TTM_DIFF_TOOL_OTF_FILE=" FILE"
 MOD_TTM_DIFF_TOOL_OTF_FILES_ADD_CLIENT="FILES TO ADD IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_FILES_DELETE_CLIENT="FILES TO DELETE IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_FILE_CHANGES="%s - FILE CHANGES"
@@ -49,7 +48,7 @@ MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED="[HISTORY FILE ADDED] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_ADDED_ERROR="[ERROR CREATING HISTORY] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED="[HISTORY FILE DELETED] %s"
 MOD_TTM_DIFF_TOOL_OTF_HISTORY_DELETED_ERROR="[ERROR DELETING HISTORY] %s"
-MOD_TTM_DIFF_TOOL_OTF_HISTORY_OPTIONS_LABEL="History options"
+MOD_TTM_DIFF_TOOL_OTF_HISTORY_OPTIONS_LABEL="<strong>History options</strong>"
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_DEV_LINK="* Main development Joomla branch link."
 MOD_TTM_DIFF_TOOL_OTF_KNOWN_FROZEN_URL="* Known stable Joomla release."
 MOD_TTM_DIFF_TOOL_OTF_LINE="LINE %s:"
@@ -59,13 +58,14 @@ MOD_TTM_DIFF_TOOL_OTF_NEW="NEW! - %s FILE"
 MOD_TTM_DIFF_TOOL_OTF_NOT_EVALUATED_FILE="This file is not evaluated because it is an unusual file found at the language location."
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_ADD_CLIENT="* NO FILES TO ADD IN THE %s CLIENT"
 MOD_TTM_DIFF_TOOL_OTF_NO_FILES_DELETE_CLIENT="* NO FILES TO DELETE IN THE %s CLIENT"
+MOD_TTM_DIFF_TOOL_OTF_NOTE_LABEL="<p class=\"alert alert-info\"><strong>NOTE</strong><br>There are 2 types of custom url to get a pack from github: from a specific branch or an alpha/beta/rc released pack.<br>Example for a released RC pack: \"https://github.com/joomla/joomla-cms/releases/download/3.8.6-rc1/Joomla_3.8.6-rc1-Release_Candidate-Full_Package.zip\"<br>Example for a branch: \"https://github.com/joomla/joomla-cms/archive/4.0-dev.zip\"</p>"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_NO="No"
 MOD_TTM_DIFF_TOOL_OTF_OPTION_YES="Yes"
 MOD_TTM_DIFF_TOOL_OTF_ORIENTATIVE_ZIPBALL_URL="* The development package is modified continuously which may change the diff."
 MOD_TTM_DIFF_TOOL_OTF_PANEL_1_TITLE="Report"
 MOD_TTM_DIFF_TOOL_OTF_PANEL_2_TITLE="History"
 MOD_TTM_DIFF_TOOL_OTF_REPORTED_DIFF="RESULTING DIFF FROM SELECTED PACKAGES"
-MOD_TTM_DIFF_TOOL_OTF_REQUIRED_FIELDS_SPACER_LABEL="Required fields"
+MOD_TTM_DIFF_TOOL_OTF_REQUIRED_FIELDS_SPACER_LABEL="<strong>Required fields</strong>"
 MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_DESC="The package to select as source or baseline for the comparison."
 MOD_TTM_DIFF_TOOL_OTF_SOURCE_REVISION_LABEL="Source package"
 MOD_TTM_DIFF_TOOL_OTF_SP_NAME="Source package name: %s"
@@ -75,7 +75,6 @@ MOD_TTM_DIFF_TOOL_OTF_SR_OPTION_CUSTOM="Custom - URL to zip file"
 MOD_TTM_DIFF_TOOL_OTF_STARTING_ON="STARTING COMPARISON ON %s UTC"
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_DESC="The package to select as target to get the diff vs the actual source package selected."
 MOD_TTM_DIFF_TOOL_OTF_TARGET_REVISION_LABEL="Target package"
-;MOD_TTM_DIFF_TOOL_OTF_TO=" TO "
 MOD_TTM_DIFF_TOOL_OTF_TP_NAME="Target package name: %s"
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_DESC="Use a valid and full URL pointing to the target Joomla pack. Only works when 'Custom - URL to zip file' option is selected from the 'Target package' field."
 MOD_TTM_DIFF_TOOL_OTF_TR_CUSTOM_VALUE_LABEL="Custom target URL"
